# semver-vcmgr-dll

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: multi-platform.yml
include/: vcmgr.h
src/: vcmgr.cpp  version_control.hpp
